# IstanHack-2022-IBW

./: HEKATHON CASE.docx  README.md
frontend/src/: consts.ts
frontend/src/assets/wasm/: syndote.meta.wasm
init/: README.md  init.js
program/: README.md
syndote-game/: README.md
syndote-game/frontend/: README.md
syndote-game/init/: README.md  init.js  package.json
syndote-game/program/: Cargo.toml  README.md  report.txt
syndote-game/program/greedy_player/: Cargo.toml  README.md
syndote-game/program/greedy_player/src/: lib.rs
syndote-game/program/player/: Cargo.toml
syndote-game/program/player1/: Cargo.toml
syndote-game/program/player1/src/: lib.rs
syndote-game/program/player2/: Cargo.toml
syndote-game/program/player2/src/: lib.rs
syndote-game/program/player3/: Cargo.toml
syndote-game/program/player3/src/: lib.rs
syndote-game/program/player4/: Cargo.toml
syndote-game/program/player4/src/: lib.rs
syndote-game/program/syndote/: Cargo.toml
syndote-game/program/syndote/io/: Cargo.toml
syndote-game/program/syndote/io/src/: lib.rs
syndote-game/program/syndote/src/: lib.rs  messages.rs  strategic_actions.rs  utils.rs
syndote-game/program/syndote/tests/: game_test.rs
