[package]
name = "syndote-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "d4552434" }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
scale-info = { version = "2.2.0", default-features = false }
